[metadata]
name = wakeflow
description = Generate and manipulate semi-analytic models of planet wakes
url = https://github.com/TomHilder/wakeflow
author = Thomas Hilder
author_email = thil0004@student.monash.edu
license = MIT
license_file = LICENSE
platforms = unix, linux, osx

[options]
package_dir=
    =src
packages=wakeflow
python_requires = >=3.6
include_package_data = True